--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,8 +28,8 @@ requirements:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - cython  >=0.29                         # [build_platform != target_platform]
-    - arrow-cpp  <9.1,>=9                    # [build_platform != target_platform]
-    - pyarrow  <9.1,>=9                      # [build_platform != target_platform]
+    - arrow-cpp                             # [build_platform != target_platform]
+    - pyarrow                      # [build_platform != target_platform]
     - libbson  >=1,<2                        # [build_platform != target_platform]
     - pkg-config                             # [build_platform != target_platform]
     - setuptools >=47
@@ -38,26 +38,32 @@ requirements:
 
   host:
     - python
-    - arrow-cpp <9.1,>=9
+    - arrow-cpp
     - cython >=0.29
     - libbson >=1,<2
     - pip
-    - pyarrow <9.1,>=9
+    - pyarrow
     - pkg-config
     - python
 
   run:
-    - pyarrow <9.1,>=9
+    - pyarrow
     - pymongo >=3.11,<5
     - python
 
 test:
+  source_files:
+    - .
+  files:
+    - run_the_tests.sh
   imports:
     - pymongoarrow
-  commands:
-    - pip check
   requires:
     - pip
+    - mongodb     # [not win]
+  commands:
+    - bash run_the_tests.sh  # [unix and not (ppc64le or python_impl=='pypy')]
+    - pip check
 
 about:
   home: https://pypi.org/project/pymongoarrow/
