--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -60,6 +60,9 @@ test:
     - pymongoarrow
   requires:
     - pip
+    - pandas
+    - numpy
+    - pyarrow
     - mongodb     # [not win]
   commands:
     - bash run_the_tests.sh  # [unix and not (ppc64le or python_impl=='pypy')]
