try with pytest

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -63,6 +63,7 @@ test:
     - pandas
     - numpy
     - pyarrow
+    - pytest
     - mongodb     # [not win]
   commands:
     - bash run_the_tests.sh  # [unix and not (ppc64le or python_impl=='pypy')]
