--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,7 +28,7 @@ requirements:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - cython  >=0.29                         # [build_platform != target_platform]
-    - arrow-cpp                             # [build_platform != target_platform]
+    - arrow-cpp >=7                           # [build_platform != target_platform]
     - pyarrow >=7                    # [build_platform != target_platform]
     - libbson  >=1,<2                        # [build_platform != target_platform]
     - pkg-config                             # [build_platform != target_platform]
@@ -38,7 +38,7 @@ requirements:
 
   host:
     - python
-    - arrow-cpp
+    - arrow-cpp >=7
     - cython >=0.29
     - libbson >=1,<2
     - pip
