--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,7 +29,7 @@ requirements:
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - cython  >=0.29                         # [build_platform != target_platform]
     - arrow-cpp                              # [build_platform != target_platform]
-    - pyarrow    >=7                            # [build_platform != target_platform]
+    - pyarrow                                # [build_platform != target_platform]
     - libbson  >=1,<2                        # [build_platform != target_platform]
     - pkg-config                             # [build_platform != target_platform]
     - setuptools >=47
@@ -38,16 +38,16 @@ requirements:
 
   host:
     - python
-    - {{ pin_compatible('arrow-cpp') }}
+    - arrow-cpp
     - cython >=0.29
     - libbson >=1,<2
     - pip
-    - pyarrow >=7
+    - pyarrow
     - pkg-config
     - python
 
   run:
-    - pyarrow >=7
+    - {{ pin_compatible('pyarrow', min_pin='7.0.0') }}
     - pymongo >=3.11,<5
     - python
 
