--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,7 +38,7 @@ requirements:
 
   host:
     - python
-    - arrow-cpp
+    - {{ pin_compatible('arrow-cpp', min_pin='7.0.0') }}
     - cython >=0.29
     - libbson >=1,<2
     - pip
@@ -47,7 +47,7 @@ requirements:
     - python
 
   run:
-    - {{ pin_compatible('pyarrow', min_pin='7.0.0') }}
+    - pyarrow >=7
     - pymongo >=3.11,<5
     - python
 
