--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,10 +27,10 @@ requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    - cython  >=0.29                         # [build_platform != target_platform]
+    - cython                                 # [build_platform != target_platform]
     - arrow-cpp                              # [build_platform != target_platform]
     - pyarrow                                # [build_platform != target_platform]
-    - libbson  >=1,<2                        # [build_platform != target_platform]
+    - libbson                                # [build_platform != target_platform]
     - pkg-config                             # [build_platform != target_platform]
     - setuptools >=47
     - {{ compiler('c') }}
@@ -38,11 +38,11 @@ requirements:
 
   host:
     - python
-    - {{ pin_compatible('arrow-cpp', min_pin='7.0.0') }}
+    - arrow-cpp
     - cython >=0.29
     - libbson >=1,<2
     - pip
-    - pyarrow
+    - pyarrow >=7
     - pkg-config
     - python
 
