--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -8,18 +8,6 @@ jobs:
     vmImage: windows-2019
   strategy:
     matrix:
-      win_64_arrow_cpp6.0.2numpy1.20python3.8.____cpython:
-        CONFIG: win_64_arrow_cpp6.0.2numpy1.20python3.8.____cpython
-        UPLOAD_PACKAGES: 'True'
-      win_64_arrow_cpp6.0.2numpy1.20python3.9.____cpython:
-        CONFIG: win_64_arrow_cpp6.0.2numpy1.20python3.9.____cpython
-        UPLOAD_PACKAGES: 'True'
-      win_64_arrow_cpp6.0.2numpy1.21python3.10.____cpython:
-        CONFIG: win_64_arrow_cpp6.0.2numpy1.21python3.10.____cpython
-        UPLOAD_PACKAGES: 'True'
-      win_64_arrow_cpp6.0.2numpy1.23python3.11.____cpython:
-        CONFIG: win_64_arrow_cpp6.0.2numpy1.23python3.11.____cpython
-        UPLOAD_PACKAGES: 'True'
       win_64_arrow_cpp7.0.1numpy1.20python3.8.____cpython:
         CONFIG: win_64_arrow_cpp7.0.1numpy1.20python3.8.____cpython
         UPLOAD_PACKAGES: 'True'
@@ -80,7 +68,7 @@ jobs:
 
     - script: |
         call activate base
-        mamba.exe install 'python=3.9' conda-build conda pip boa 'conda-forge-ci-setup=3' -c conda-forge --strict-channel-priority --yes
+        mamba.exe install "python=3.9" conda-build conda pip boa conda-forge-ci-setup=3 "py-lief<0.12" -c conda-forge --strict-channel-priority --yes
       displayName: Install conda-build
 
     - script: set PYTHONUNBUFFERED=1
