--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,6 @@ build:
     - export MONGO_LIBARROW_DIR="${PREFIX}/lib"   # [unix]
     - export MONGO_NO_COPY_LIBBSON=1              # [unix]
     - export LIBBSON_INSTALL_DIR="${PREFIX}"      # [unix]
-    - export MACOSX_DEPLOYMENT_TARGET="10.15"     # [unix]
     - set MONGO_NO_COPY_LIBARROW=1                # [win]
     - set "MONGO_LIBARROW_DIR=%LIBRARY_LIB%"      # [win]
     - set MONGO_NO_COPY_LIBBSON=1                 # [win]
@@ -30,25 +29,28 @@ requirements:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - cython                                 # [build_platform != target_platform]
-    - arrow-cpp                              # [build_platform != target_platform]
     - pyarrow                                # [build_platform != target_platform]
     - libbson                                # [build_platform != target_platform]
     - pkg-config                             # [build_platform != target_platform]
+    - clangdev {{ llvm_version }}            # [osx and arm64]
+    - llvmdev {{ llvm_version }}             # [osx and arm64]
+    - gnuconfig                              # [osx and arm64]
     - setuptools >=47
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
 
   host:
-    - python
-    - arrow-cpp
+    - {{ pin_subpackage('arrow-cpp', exact=True) }}
+    - clangdev {{ llvm_version }}
+    - llvmdev {{ llvm_version }}
     - cython >=0.29
     - libbson >=1,<2
     - pip
     - pyarrow >=7
     - pkg-config
-    - python
 
   run:
+    - {{ pin_subpackage('arrow-cpp', exact=True) }}
     - pyarrow >=7
     - pymongo >=3.11,<5
     - python
