--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,6 +40,7 @@ requirements:
     - {{ compiler('cxx') }}
 
   host:
+    - python
     - {{ pin_compatible('arrow-cpp', exact=True) }}
     - clangdev {{ llvm_version }}
     - llvmdev {{ llvm_version }}
