--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,12 +13,13 @@ source:
 build:
   number: 0
   skip: true  # [arrow_cpp == "6.0.2"]
+  script_env:
+     MACOSX_DEPLOYMENT_TARGET=10.15
   script:
     - export MONGO_NO_COPY_LIBARROW=1             # [unix]
     - export MONGO_LIBARROW_DIR="${PREFIX}/lib"   # [unix]
     - export MONGO_NO_COPY_LIBBSON=1              # [unix]
     - export LIBBSON_INSTALL_DIR="${PREFIX}"      # [unix]
-    - export MACOSX_DEPLOYMENT_TARGET="10.15"     # [osx]
     - set MONGO_NO_COPY_LIBARROW=1                # [win]
     - set "MONGO_LIBARROW_DIR=%LIBRARY_LIB%"      # [win]
     - set MONGO_NO_COPY_LIBBSON=1                 # [win]
