--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,9 +14,9 @@ build:
   number: 0
   skip: true  # [arrow_cpp == "6.0.2"]
   script_env:
-     MACOSX_DEPLOYMENT_TARGET=10.15
+     MACOSX_DEPLOYMENT_TARGET="10.15" # [osx]
+     CXXFLAGS="${CXXFLAGS} -D_LIBCPP_DISABLE_AVAILABILITY"  # [osx]
   script:
-    - export CXXFLAGS="${CXXFLAGS} -D_LIBCPP_DISABLE_AVAILABILITY"  # [unix]
     - export MONGO_NO_COPY_LIBARROW=1             # [unix]
     - export MONGO_LIBARROW_DIR="${PREFIX}/lib"   # [unix]
     - export MONGO_NO_COPY_LIBBSON=1              # [unix]
