--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,8 +14,8 @@ build:
   number: 0
   skip: true  # [arrow_cpp == "6.0.2"]
   script_env:
-     MACOSX_DEPLOYMENT_TARGET="10.15" # [osx]
-     CXXFLAGS="${CXXFLAGS} -D_LIBCPP_DISABLE_AVAILABILITY"  # [osx]
+     MACOSX_DEPLOYMENT_TARGET="10.15"
+     CXXFLAGS="${CXXFLAGS} -D_LIBCPP_DISABLE_AVAILABILITY"
   script:
     - export MONGO_NO_COPY_LIBARROW=1             # [unix]
     - export MONGO_LIBARROW_DIR="${PREFIX}/lib"   # [unix]
