--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,6 +13,8 @@ source:
 build:
   number: 0
   skip: true  # [arrow_cpp == "6.0.2"]
+  script_env:
+    - MACOSX_DEPLOYMENT_TARGET=10.12
   script:
     - set eux  # [unix]
     - export MONGO_NO_COPY_LIBARROW=1             # [unix]
