--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,8 @@ package:
 source:
   url: https://pypi.io/packages/source/p/pymongoarrow/pymongoarrow-{{ version }}.tar.gz
   sha256: 354bb501ea903049edd457f11be2d3a2e76e9169abdf4566d446a0c6bca19138
+  patches:
+    - patches/0001-patch-as_py.patch
 
 build:
   number: 0
@@ -45,12 +47,12 @@ requirements:
     - cython >=0.29
     - libbson >=1,<2
     - pip
-    - pyarrow >=7
+    - pyarrow >=8
     - pkg-config
     - python
 
   run:
-    - pyarrow >=7
+    - pyarrow >=8
     - pymongo >=3.11,<5
     - arrow-cpp
     - python
