--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -43,17 +43,16 @@ requirements:
   host:
     - python
     - arrow-cpp
+    - {{ pin_compatible('pyarrow', max_pin='x') }}
     - cython >=0.29
     - libbson >=1,<2
     - pip
-    - pyarrow >=8
     - pkg-config
     - python
 
   run:
-    - pyarrow >=8
     - pymongo >=3.11,<5
-    - arrow-cpp
+    - {{ pin_compatible('pyarrow', max_pin='x') }}
     - python
 
 test:
