--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -43,7 +43,7 @@ requirements:
   host:
     - python
     - libarrow
-    - {{ pin_compatible('pyarrow', max_pin='x') }}
+    - pyarrow
     - cython >=0.29
     - libbson >=1,<2
     - pip
