--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -43,11 +43,12 @@ requirements:
   host:
     - python
     - libarrow
-    - pyarrow
+    - {{ pin_compatible('pyarrow', max_pin='x') }}
     - cython >=0.29
     - libbson >=1,<2
     - pip
     - pkg-config
+    - openssl >=3.1.1
     - python
 
   run:
