lower bound for mongo version

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -67,7 +67,8 @@ test:
     - numpy
     - pyarrow
     - pytest
-    - mongodb     # [not win]
+    - mongodb >=6.0.2    # [not win]
+
   commands:
     - bash run_the_tests.sh  # [unix and not (ppc64le or python_impl=='pypy')]
 
