openssl for mongodb

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -68,6 +68,7 @@ test:
     - pyarrow
     - pytest
     - mongodb >=6.0.2    # [not win]
+    - openssl >=1.1.1q,<1.1.2a   # [not win]
 
   commands:
     - bash run_the_tests.sh  # [unix and not (ppc64le or python_impl=='pypy')]
