--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -66,7 +66,7 @@ test:
     - numpy
     - pyarrow
     - pytest
-    - podman
+    - mongodb >=6.0.2  # [not win]
 
   commands:
     - bash run_the_tests.sh  # [unix and not (ppc64le or python_impl=='pypy')]
