--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,27 +1,20 @@
+{% set name = "pymongoarrow" %}
+{% set version = "1.0.1" %}
+
+
 package:
-  name: pymongoarrow
-  version: 1.0.1
+  name: {{ name|lower }}
+  version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/p/pymongoarrow/pymongoarrow-1.0.1.tar.gz
+  url: https://pypi.io/packages/source/p/pymongoarrow/pymongoarrow-{{ version }}.tar.gz
   sha256: 27174da65808cc26cb1329caa384ff8927a6e25b4a2b43c7c778b951a697a735
 
 build:
-  number: 0
-  skip: true  # [libarrow == "9.0.0"]
-  script:
-    - set eux  # [unix]
-    - export MONGO_NO_COPY_LIBARROW=1             # [unix]
-    - export MONGO_LIBARROW_DIR="${PREFIX}/lib"   # [unix]
-    - export MONGO_NO_COPY_LIBBSON=1              # [unix]
-    - export LIBBSON_INSTALL_DIR="${PREFIX}"      # [unix]
-    - export MONGO_CREATE_LIBARROW_SYMLINKS=""    # [unix]
-    - export MONGO_ADD_GLIBCXX_OVERRIDE=""        # [unix]
-    - set MONGO_NO_COPY_LIBARROW=1                # [win]
     - set "MONGO_LIBARROW_DIR=%LIBRARY_LIB%"      # [win]
     - set MONGO_NO_COPY_LIBBSON=1                 # [win]
     - set "LIBBSON_INSTALL_DIR=%LIBRARY_PREFIX%"  # [win]
-    - python -m pip install . --no-deps -vvv
+    - {{ PYTHON }} -m pip install . --no-deps -vvv
 
 requirements:
   build:
@@ -32,7 +25,7 @@ requirements:
     - pyarrow                                # [build_platform != target_platform]
     - libbson                                # [build_platform != target_platform]
     - pkg-config                             # [build_platform != target_platform]
-    - setuptools >=47
+    - pip
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
 
