--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,16 +42,15 @@ requirements:
   host:
     - python
     - libarrow
-    - {{ pin_compatible('pyarrow', max_pin='x') }}
+    - pyarrow
     - cython >=0.29
     - libbson >=1,<2
     - pip
     - pkg-config
-    - python
 
   run:
     - pymongo >=3.11,<5
-    - {{ pin_compatible('pyarrow', max_pin='x') }}
+    - pyarrow
     - python
 
 test:
@@ -63,7 +62,6 @@ test:
     - pip
     - pandas
     - numpy
-    - {{ pin_compatible('pyarrow', max_pin='x') }}
     - pytest
     # TODO: replace with mongodb install once https://github.com/conda-forge/mongodb-feedstock/pull/72 is resolved
     - icu
