--- a/.ci_support/linux_64_libarrow17.0numpy1.23python3.11.____cpython.yaml
+++ b/.ci_support/linux_64_libarrow17.0numpy1.23python3.11.____cpython.yaml
@@ -1,7 +1,13 @@
 c_compiler:
-- vs2019
+- gcc
+c_compiler_version:
+- '12'
 c_stdlib:
-- vs
+- sysroot
+c_stdlib_version:
+- '2.17'
+cdt_name:
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
@@ -9,11 +15,15 @@ channel_targets:
 curl:
 - '8'
 cxx_compiler:
-- vs2019
+- gxx
+cxx_compiler_version:
+- '12'
+docker_image:
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 icu:
 - '73'
 libarrow:
-- '13'
+- '17.0'
 numpy:
 - '1.23'
 pin_run_as_build:
@@ -23,7 +33,11 @@ pin_run_as_build:
 python:
 - 3.11.* *_cpython
 target_platform:
-- win-64
+- linux-64
 zip_keys:
+- - c_compiler_version
+  - cxx_compiler_version
+- - c_stdlib_version
+  - cdt_name
 - - python
   - numpy
