--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "pymongoarrow" %}
-{% set version = "1.5.0" %}
+{% set version = "1.5.1" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/p/pymongoarrow/pymongoarrow-{{ version }}.tar.gz
-  sha256: 27233f2bff76b083fc949535231675d330c166a479750e3c2a77246a27b7969d
+  sha256: 32917d27c547b74dc4f8576d655cf3c86fb062e4d87baa69b54d5c4158bf5d0b
 
 build:
   number: 0
@@ -49,9 +49,11 @@ requirements:
     - pkg-config
 
   run:
-    - pymongo >=3.11,<5
+    - pymongo >=4.4,<5
     - pyarrow
     - python
+    - pandas >=1.3.5,<3
+    - packaging >=23.2
 
 test:
   source_files:
